Added book details component

--- a/bookshare_front/src/Lang/EN/EN.json
+++ b/bookshare_front/src/Lang/EN/EN.json
@@ -13,6 +13,9 @@
   "Book.releasedAfter": "Released after",
   "Book.copyCount": "Copies count",
   "Book.genres": "Genres",
+  "Book.Modify": "Modify",
+  "Book.Delete": "Delete",
+  "Book.availability": "Availability",
   "Bookshelf.Move": "Move",
   "Bookshelf.Remove": "Remove",
   "Bookshelf.AddBookCopy": "Add Book",
@@ -105,6 +108,7 @@
   "Form.GenreCreatedMessage": "Genre has been created",
   "Form.AccountCreatedMessage": "Account has been created. You will receive email with activation link soon",
   "Form.PasswordsNotMatchError": "Passwords do not match",
+  "Form.BookDeletedMessage": "Book has been deleted",
   "Genre.code": "Genre Name",
   "Genre.key": "Language",
   "Genre.keys": "Languages",
@@ -122,6 +126,7 @@
   "Modal.DeleteConfirm": "Confirm delete operation",
   "Modal.DeleteBookshelfText": "Are you sure you want to delete this bookshelf?",
   "Modal.DeleteGenreText": "Are you sure you want to delete this genre?",
+  "Modal.DeleteBookText": "Are you sure you want to delete this book?",
   "Navbar.login": "Log In",
   "Navbar.register": "Register",
   "Navbar.accounts": "Accounts List",
@@ -154,6 +159,7 @@
   "user_already_disabled": "User is already disabled",
   "request_sent_message": "If account with given user/email exists, link has been send to corresponding email",
   "cant_delete_bookshelf_with_books": "You can not remove bookshelf with books inside. Move or remove the books first",
+  "cant_delete_book_with_copies": "You can not remove book with existing copies. Remove the copies first",
   "mail_exist": "Mail address already in use",
   "login_exist": " Login already in use",
   "password_in_use": "Password already in use",
