--- a/bookshare_front/src/Lang/PL/PL.json
+++ b/bookshare_front/src/Lang/PL/PL.json
@@ -14,6 +14,9 @@
   "Book.copyCount": "Liczba egzemplarzy",
   "Book.language": "Język",
   "Book.genres": "Gatunki",
+  "Book.Modify": "Modyfikuj",
+  "Book.Delete": "Usuń",
+  "Book.availability": "Dostępność",
   "Bookshelf.Move": "Przenieś",
   "Bookshelf.Remove": "Usuń",
   "Bookshelf.AddBookCopy": "Dodaj ksiażkę",
@@ -105,6 +108,7 @@
   "Form.GenreCreatedMessage": "Gatunek został dodany",
   "Form.AccountCreatedMessage": "Konto zostało utworzone. Niedługo otrzymasz wiadomość z linkiem aktywacyjnym",
   "Form.PasswordsNotMatchError": "Hasła nie są takie same",
+  "Form.BookDeletedMessage": "Książka została usunięta",
   "Genre.code": "Nazwa gatunku",
   "Genre.key": "Język",
   "Genre.keys": "Języki",
@@ -122,6 +126,7 @@
   "Modal.DeleteConfirm": "Potwierdź usunięcie",
   "Modal.DeleteBookshelfText": "Czy na pewno chcesz usunąć tę półkę?",
   "Modal.DeleteGenreText": "Czy na pewno chcesz usunąć ten gatunek?",
+  "Modal.DeleteBookText": "Czy na pewno chcesz usunąć tę książkę?",
   "Navbar.login": "Zaloguj",
   "Navbar.register": "Zarejestruj",
   "Navbar.accounts": "Lista kont",
@@ -154,6 +159,7 @@
   "user_already_disabled": "Użytkownik jest już zablokowany",
   "request_sent_message": "Jeżeli w serwisie istnieje konto, została na nie wysłana wiadomość",
   "cant_delete_bookshelf_with_books": "Nie możesz usunąć półki na której znajdują się ksiażki. Usuń książki lub przenieś je na inną półkę",
+  "cant_delete_book_with_copies": "Nie możesz usunąć książki z istniejącymi egzemplarzami. Usuń najpierw egzemplarze",
   "mail_exist": "Adres email jest już używany",
   "login_exist": " Login jest już używany",
   "password_in_use": "Hasło już w użyciu",
