Created component for adding book copies, updated navbar

--- a/bookshare_front/src/Lang/EN/EN.json
+++ b/bookshare_front/src/Lang/EN/EN.json
@@ -7,6 +7,7 @@
   "Book.author": "Author",
   "Book.title": "Title",
   "Book.coverType": "Cover type",
+  "Book.book": "Book",
   "Book.language": "Language",
   "Book.releaseDate": "Year of release",
   "Book.releasedBefore": "Released before",
@@ -81,11 +82,13 @@
   "Form.modificationDate": "Last modification date",
   "Form.CreateGenreButton": "Create genre",
   "Form.CreateBookshelfButton": "Create bookshelf",
+  "Form.CreateBookCopyButton": "Create Book Copy",
   "Form.CreateBookButton": "Create book",
   "Form.KeyTooShortError": "Language name has to be exactly 2 letters long",
   "Form.KeysNotUnique": "Each language name has to be unique",
   "Form.BookshelfCreatedMessage": "Bookshelf created successfully",
   "Form.BookCreatedMessage": "Book created successfully",
+  "Form.BookCopyCreatedMessage": "Book copy created successfully",
   "Form.Success": "Success",
   "Form.OK": "OK",
   "Form.genreCodeUp": "Genre Name - alphabetically - a -> z",
@@ -143,6 +146,9 @@
   "Navbar.genres.add": "Add genre",
   "Navbar.genres.list": "Genres list",
   "Navbar.AccountEdit": "Edit Account",
+  "Navbar.bookCopies": "Book copies",
+  "Navbar.bookCopy.add": "Add book copy",
+  "Navbar.bookCopies.list": "Book copies list",
   "UserInfo.Header": "Information",
   "CUSTOM": "Custom",
   "HARD": "Hard",
