--- a/bookshare_front/src/Lang/PL/PL.json
+++ b/bookshare_front/src/Lang/PL/PL.json
@@ -7,6 +7,7 @@
   "Button.Close": "Zamknij",
   "Book.author": "Autor",
   "Book.title": "Tytuł",
+  "Book.book": "Książka",
   "Book.coverType": "Rodzaj okładki",
   "Book.releaseDate": "Rok wydania",
   "Book.releasedBefore": "Wydana przed",
@@ -82,10 +83,12 @@
   "Form.CreateGenreButton": "Stwórz gatunek",
   "Form.CreateBookButton": "Stwórz książkę",
   "Form.CreateBookshelfButton": "Stwórz półkę",
+  "Form.CreateBookCopyButton": "Dodaj egzemplarz książki",
   "Form.KeyTooShortError": "Kade pole Język musi mieć długość dwóch znaków",
   "Form.KeysNotUnique": "Każdy język musi mieć unikalną wartość",
   "Form.BookshelfCreatedMessage": "Półka utworzona pomyślnie",
   "Form.BookCreatedMessage": "Książka utworzona pomyślnie",
+  "Form.BookCopyCreatedMessage": "Egzemplarz książki utworzony pomyślnie",
   "Form.Success": "Sukces",
   "Form.OK": "OK",
   "Form.genreCodeUp": "Nazwa gatunku - alfabetycznie - a -> z",
@@ -143,6 +146,9 @@
   "Navbar.genres.add": "Dodaj gatunek",
   "Navbar.genres.list": "Lista gatunków",
   "Navbar.AccountEdit": "Edytuj ustawienia konta",
+  "Navbar.bookCopies": "Egzemplarze książek",
+  "Navbar.bookCopy.add": "Dodaj egzemplarz",
+  "Navbar.bookCopies.list": "Lista egzemplarzy",
   "UserInfo.Header": "Informacje",
   "CUSTOM": "Niestandardowa",
   "HARD": "Twarda",
