Too much to describe

--- a/bookshare_front/src/Lang/EN/EN.json
+++ b/bookshare_front/src/Lang/EN/EN.json
@@ -1,6 +1,10 @@
 {
+  "Author.name": "Name",
+  "Author.surname": "Surame",
   "Form.Yes": "Yes",
   "Form.No": "No",
+  "Form.See": "Display",
+  "Form.Stay": "Stay on page",
   "Error.Readiness": "Connection to server has been lost.",
   "Error.Title": "Error",
   "Button.Close": "Close",
@@ -8,6 +12,7 @@
   "Book.title": "Title",
   "Book.coverType": "Cover type",
   "Book.book": "Book",
+  "Book.Reservation": "Reserved untill",
   "Book.language": "Language",
   "Book.releaseDate": "Year of release",
   "Book.releasedBefore": "Released before",
@@ -17,6 +22,15 @@
   "Book.Modify": "Modify",
   "Book.Delete": "Delete",
   "Book.availability": "Availability",
+  "Copy.MoveConfirmMessage": "Are you sure you want to move this copy to another shelf??",
+  "Copy.MoveMSuccessMessage": "Copy moved successfully",
+  "Copy.MoveCopyTitle": "Move copy",
+  "BookCopy.makeReservation": "Make reservation",
+  "BookCopy.Modify": "Modify",
+  "BookCopy.Delete": "Delete",
+  "BookCopy.Take": "Take",
+  "BookCopy.Move": "Move",
+  "BookCopy.GenerateQR": "Generate QR code",
   "Bookshelf.Move": "Move",
   "Bookshelf.Remove": "Remove",
   "Bookshelf.AddBookCopy": "Add Book",
@@ -42,6 +56,8 @@
   "Form.Bookshelf": "Bookshelf",
   "Form.passwordConfirm": "Confirm password",
   "Form.sortBy": "Sort by",
+  "Form.EmailFormatError": "Incorrect Email Format",
+  "Form.LoginTooShortError": "Login too short",
   "Form.loginButton": "Log in",
   "Form.registerButton": "Create account",
   "Form.forgotPasswordButton": "Forgot Password",
@@ -56,6 +72,8 @@
   "Form.userActivated": "Activated",
   "Form.userDisabled": "Disabled",
   "Form.lastSuccessfulLoginAttempt": "Last successfull login",
+  "Form.LocationUnavailable": "Unavailable",
+  "Form.CreateAuthorButton": "Create Author",
   "Form.date": "Date",
   "Form.level": "Log Level",
   "Form.message": "Message",
@@ -112,8 +130,13 @@
   "Form.AccountCreatedMessage": "Account has been created. You will receive email with activation link soon",
   "Form.PasswordsNotMatchError": "Passwords do not match",
   "Form.BookDeletedMessage": "Book has been deleted",
+  "Form.BookCopyDeletedMessage": "Book copy has been deleted",
+  "Form.AuthorCreatedMessage": "Author has been created",
+  "Form.Cancel": "Cancel",
   "Form.dateBefore": "Date before",
   "Form.dateAfter": "Date after",
+  "Form.PaginationInfo": "Displaying items {{from}} - {{to}} out of {{of}}",
+  "Form.displaySize": "Amount of displayed items",
   "Genre.code": "Genre Name",
   "Genre.key": "Language",
   "Genre.keys": "Languages",
@@ -125,6 +148,8 @@
   "Home.BookMapTab": "Find Book",
   "Home.BookshelfMapTab": "Find Bookshelf",
   "Home.NearbyTab": "Nearby",
+  "Info.ConnectionBack": "Connection is back",
+  "Info.Title": "Information",
   "Logs.FilterButton": "Filter",
   "Log.Title": "Log",
   "Modal.PickLocation": "Pick Location",
@@ -132,6 +157,7 @@
   "Modal.DeleteBookshelfText": "Are you sure you want to delete this bookshelf?",
   "Modal.DeleteGenreText": "Are you sure you want to delete this genre?",
   "Modal.DeleteBookText": "Are you sure you want to delete this book?",
+  "Modal.DeleteBookText": "Are you sure you want to delete this book copy?",
   "Navbar.login": "Log In",
   "Navbar.register": "Register",
   "Navbar.accounts": "Accounts List",
@@ -151,7 +177,13 @@
   "Navbar.bookCopies": "Book copies",
   "Navbar.bookCopy.add": "Add book copy",
   "Navbar.bookCopies.list": "Book copies list",
+  "Nearby.MinimalBooksValue": "Minimal amount of books on shelf",
+  "Navbar.own": "My books",
+  "Navbar.own.stored": "Stored books",
+  "Navbar.own.reserved": "Reserved books",
+  "Navbar.own.added": "Books added by me",
   "UserInfo.Header": "Information",
+  "QR.Title": "QR code",
   "CUSTOM": "Custom",
   "HARD": "Hard",
   "SOFT": "Soft",
@@ -165,6 +197,7 @@
   "user_not_disabled": "User is not disabled",
   "user_not_active": "User is not activated",
   "user_already_disabled": "User is already disabled",
+  "user_already_activated": "User has already been disabled",
   "request_sent_message": "If account with given user/email exists, link has been send to corresponding email",
   "cant_delete_bookshelf_with_books": "You can not remove bookshelf with books inside. Move or remove the books first",
   "cant_delete_book_with_copies": "You can not remove book with existing copies. Remove the copies first",
@@ -176,5 +209,11 @@
   "genre_exist": "Genre with this name already exists",
   "genre_not_exist": "Genre doesnt exist",
   "cant_create_empty_genre": "You can not create genre without at least one translation",
-  "wrong_argument_exception": "Wrong argument passed"
+  "wrong_argument_exception": "Wrong argument passed",
+  "book_copy_not_found": "Book copy not found",
+  "user_enabled": "User enabled",
+  "cant_delete_genre_used_by_books": "Cant delete genre that is currently used by books",
+  "user_activated": "User activated",
+  "unknown_error_occured": "Unknown error occured",
+  "book_already_on_shelf": "Book is already on this shelf"
 }
