--- a/bookshare_front/src/Lang/PL/PL.json
+++ b/bookshare_front/src/Lang/PL/PL.json
@@ -1,13 +1,18 @@
 {
+  "Author.name": "Imię",
+  "Author.surname": "Nazwisko",
   "Form.Yes": "Tak",
   "Form.No": "Nie",
   "Site.name": "BookCross",
+  "Form.See": "Wyświetl",
+  "Form.Stay": "Zostań na stronie",
   "Error.Readiness": "Utracono połączenie z serwerem.",
   "Error.Title": "Błąd",
   "Button.Close": "Zamknij",
   "Book.author": "Autor",
   "Book.title": "Tytuł",
   "Book.book": "Książka",
+  "Book.Reservation": "Rezerwacja do",
   "Book.coverType": "Rodzaj okładki",
   "Book.releaseDate": "Rok wydania",
   "Book.releasedBefore": "Wydana przed",
@@ -17,7 +22,16 @@
   "Book.genres": "Gatunki",
   "Book.Modify": "Modyfikuj",
   "Book.Delete": "Usuń",
+  "Copy.MoveCopyTitle": "Przenieś egzemplarz",
+  "Copy.MoveMSuccessMessage": "Kopia przeniesiona pomyślnie",
+  "Copy.MoveConfirmMessage": "Na pewno chcesz przenieść ten egzemplarz na inną półię?",
   "Book.availability": "Dostępność",
+  "BookCopy.makeReservation": "Zarezerwuj",
+  "BookCopy.Modify": "Modyfikuj",
+  "BookCopy.Delete": "Usuń",
+  "BookCopy.Take": "Weź",
+  "BookCopy.GenerateQR": "Wygeneruj kod QR",
+  "BookCopy.Move": "Przenieś",
   "Bookshelf.Move": "Przenieś",
   "Bookshelf.Remove": "Usuń",
   "Bookshelf.AddBookCopy": "Dodaj ksiażkę",
@@ -31,6 +45,7 @@
   "Filter.Title": "Filtr",
   "Filter.ActiveFilters": "Aktywne filtry",
   "Form.Filter": "Filtruj",
+  "Form.EmailFormatError": "Niepoprawny format adresu email",
   "Form.ClearFilter": "Wyczyść filtr",
   "Form.email": "Adres email",
   "Form.login": "Login",
@@ -42,6 +57,7 @@
   "Form.Bookshelf": "Półka",
   "Form.passwordConfirm": "Potwierdź hasło",
   "Form.sortBy": "Sortuj po",
+  "Form.LoginTooShortError": "Zbyt krótki login",
   "Form.loginButton": "Zaloguj",
   "Form.registerButton": "Stwórz konto",
   "Form.forgotPasswordButton": "Zapomniałem hasła",
@@ -56,6 +72,8 @@
   "Form.userActivated": "Aktywowany",
   "Form.userDisabled": "Zablokowany",
   "Form.lastSuccessfulLoginAttempt": "Ostatnie udane logowanie",
+  "Form.LocationUnavailable": "Niedostępna",
+  "Form.CreateAuthorButton": "Stwórz autora",
   "Form.date": "Data",
   "Form.level": "Poziom logu",
   "Form.message": "Wiadomość",
@@ -112,8 +130,13 @@
   "Form.AccountCreatedMessage": "Konto zostało utworzone. Niedługo otrzymasz wiadomość z linkiem aktywacyjnym",
   "Form.PasswordsNotMatchError": "Hasła nie są takie same",
   "Form.BookDeletedMessage": "Książka została usunięta",
+  "Form.BookCopyDeletedMessage": "Egzemplarz został usunięty",
+  "Form.AuthorCreatedMessage": "Autor został stworzony",
+  "Form.Cancel": "Anuluj",
   "Form.dateBefore": "Przed datą",
   "Form.dateAfter": "Po dacie",
+  "Form.PaginationInfo": "Wyświelanie elementów {{from}} - {{to}} z {{of}}",
+  "Form.displaySize": "Ilość wyświetlanych elementów",
   "Genre.code": "Nazwa gatunku",
   "Genre.key": "Język",
   "Genre.keys": "Języki",
@@ -124,6 +147,8 @@
   "Genre.usageCount": "Ilość użyć",
   "Home.BookMapTab": "Znajdź książkę",
   "Home.BookshelfMapTab": "Znajdź półkę",
+  "Info.ConnectionBack": "Odzyskano połączenie",
+  "Info.Title": "Informacja",
   "Home.NearbyTab": "Okolica",
   "Logs.FilterButton": "Filtruj",
   "Log.Title": "Wpis",
@@ -132,6 +157,7 @@
   "Modal.DeleteBookshelfText": "Czy na pewno chcesz usunąć tę półkę?",
   "Modal.DeleteGenreText": "Czy na pewno chcesz usunąć ten gatunek?",
   "Modal.DeleteBookText": "Czy na pewno chcesz usunąć tę książkę?",
+  "Modal.DeleteBookCopyText": "Czy na pewno chcesz usunąć ten egzemplarz?",
   "Navbar.login": "Zaloguj",
   "Navbar.register": "Zarejestruj",
   "Navbar.accounts": "Lista kont",
@@ -151,7 +177,13 @@
   "Navbar.bookCopies": "Egzemplarze książek",
   "Navbar.bookCopy.add": "Dodaj egzemplarz",
   "Navbar.bookCopies.list": "Lista egzemplarzy",
+  "Nearby.MinimalBooksValue": "Minimalna ilosć książek",
+  "Navbar.own": "Moje książki",
+  "Navbar.own.stored": "Posiadane ",
+  "Navbar.own.reserved": "Zarezerwowane",
+  "Navbar.own.added": "Dodane przeze mnie",
   "UserInfo.Header": "Informacje",
+  "QR.Title": "kod QR",
   "CUSTOM": "Niestandardowa",
   "HARD": "Twarda",
   "SOFT": "Miękka",
@@ -165,6 +197,7 @@
   "user_not_active": "Konto użytkownika nie zostało aktywowane",
   "user_not_disabled": "Użytkownik nie jest zablokowany",
   "user_already_disabled": "Użytkownik jest już zablokowany",
+  "user_already_activated": "Użytkownik został już aktywowany",
   "request_sent_message": "Jeżeli w serwisie istnieje konto, została na nie wysłana wiadomość",
   "cant_delete_bookshelf_with_books": "Nie możesz usunąć półki na której znajdują się ksiażki. Usuń książki lub przenieś je na inną półkę",
   "cant_delete_book_with_copies": "Nie możesz usunąć książki z istniejącymi egzemplarzami. Usuń najpierw egzemplarze",
@@ -176,5 +209,11 @@
   "genre_exist": "Gatunek z tą nazwą już istnieje",
   "genre_not_exist": "Gatunek nie istnieje",
   "cant_create_empty_genre": "Nie można utworzyć gatunku bez conajmiej jednego tłumaczenia",
-  "wrong_argument_exception": "Podano nieprawidłowy argument"
+  "wrong_argument_exception": "Podano nieprawidłowy argument",
+  "book_copy_not_found": "Nie odnaleziono egzemplarza",
+  "user_enabled": "Użytkownik odblokowany",
+  "user_activated": "Użytkownik aktywowany",
+  "cant_delete_genre_used_by_books": "Nie mozna usunać gatunku do którego są przypisane ksiażki",
+  "unknown_error_occured": "Wystąpił nieznany błąd",
+  "book_already_on_shelf": "Książka znajduje się już na tej półce"
 }
