Added modifying options

--- a/bookshare_front/src/Lang/EN/EN.json
+++ b/bookshare_front/src/Lang/EN/EN.json
@@ -23,7 +23,7 @@
   "Book.Delete": "Delete",
   "Book.availability": "Availability",
   "Copy.MoveConfirmMessage": "Are you sure you want to move this copy to another shelf??",
-  "Copy.MoveMSuccessMessage": "Copy moved successfully",
+  "Copy.MoveSuccessMessage": "Copy moved successfully",
   "Copy.MoveCopyTitle": "Move copy",
   "BookCopy.makeReservation": "Make reservation",
   "BookCopy.Modify": "Modify",
@@ -99,6 +99,9 @@
   "Form.lastUnsuccessfulLoginIp": "Last unsuccessful login IP",
   "Form.modificationDate": "Last modification date",
   "Form.CreateGenreButton": "Create genre",
+  "Form.ModifyGenreButton": "Modify genre",
+  "Form.ModifyBookButton": "Modify book",
+  "Form.ModifyBookCopyButton": "Modify book copy",
   "Form.CreateBookshelfButton": "Create bookshelf",
   "Form.CreateBookCopyButton": "Create Book Copy",
   "Form.CreateBookButton": "Create book",
@@ -158,6 +161,8 @@
   "Modal.DeleteGenreText": "Are you sure you want to delete this genre?",
   "Modal.DeleteBookText": "Are you sure you want to delete this book?",
   "Modal.DeleteBookText": "Are you sure you want to delete this book copy?",
+  "Modal.CreationConfirm": "Do you want to create a shelf in selected location?",
+  "Modal.genre.modify": "Modify genre",
   "Navbar.login": "Log In",
   "Navbar.register": "Register",
   "Navbar.accounts": "Accounts List",
@@ -167,6 +172,7 @@
   "Navbar.bookshelves": "Bookshelves",
   "Navbar.bookshelves.add": "Add bookshelf",
   "Navbar.bookshelves.list": "Bookshelves list",
+  "Navbar.bookshelves.map": "Bookshelves Map",
   "Navbar.books": "Books",
   "Navbar.books.add": "Add book",
   "Navbar.books.list": "Books list",
@@ -191,6 +197,7 @@
   "ROLE_ADMIN": "Admin",
   "ROLE_MODERATOR": "Moderator",
   "ROLE_GUEST": "Guest",
+  "ShelfMap.title": "Shef Map",
   "user_not_found": "User not found",
   "incorrect_password": "Incorrect password",
   "user_disabled": "User has been disabled.",
@@ -215,5 +222,7 @@
   "cant_delete_genre_used_by_books": "Cant delete genre that is currently used by books",
   "user_activated": "User activated",
   "unknown_error_occured": "Unknown error occured",
-  "book_already_on_shelf": "Book is already on this shelf"
+  "book_already_on_shelf": "Book is already on this shelf",
+  "version_mismatch": "Your page is not up to date. To make changes, reload it first",
+  "auth_token_expired": "Your login token expired. Please log again"
 }
