--- a/bookshare_front/src/Lang/PL/PL.json
+++ b/bookshare_front/src/Lang/PL/PL.json
@@ -23,7 +23,7 @@
   "Book.Modify": "Modyfikuj",
   "Book.Delete": "Usuń",
   "Copy.MoveCopyTitle": "Przenieś egzemplarz",
-  "Copy.MoveMSuccessMessage": "Kopia przeniesiona pomyślnie",
+  "Copy.MoveSuccessMessage": "Kopia przeniesiona pomyślnie",
   "Copy.MoveConfirmMessage": "Na pewno chcesz przenieść ten egzemplarz na inną półię?",
   "Book.availability": "Dostępność",
   "BookCopy.makeReservation": "Zarezerwuj",
@@ -99,6 +99,9 @@
   "Form.lastUnsuccessfulLoginIp": "IP ostatniego nieudanego logowania",
   "Form.modificationDate": "Data ostatniej modyfikacji",
   "Form.CreateGenreButton": "Stwórz gatunek",
+  "Form.ModifyBookButton": "Modyfikuj książkę",
+  "Form.ModifyGenreButton": "Modyfikuj gatunek",
+  "Form.ModifyBookCopyButton": "Modyfikuj egzemplarz",
   "Form.CreateBookButton": "Stwórz książkę",
   "Form.CreateBookshelfButton": "Stwórz półkę",
   "Form.CreateBookCopyButton": "Dodaj egzemplarz książki",
@@ -158,6 +161,8 @@
   "Modal.DeleteGenreText": "Czy na pewno chcesz usunąć ten gatunek?",
   "Modal.DeleteBookText": "Czy na pewno chcesz usunąć tę książkę?",
   "Modal.DeleteBookCopyText": "Czy na pewno chcesz usunąć ten egzemplarz?",
+  "Modal.CreationConfirm": "Czy chcesz utworzyć półkę w wybranej lokacji??",
+  "Modal.genre.modify": "Modyfikuj gatunek",
   "Navbar.login": "Zaloguj",
   "Navbar.register": "Zarejestruj",
   "Navbar.accounts": "Lista kont",
@@ -167,6 +172,7 @@
   "Navbar.bookshelves": "Półki",
   "Navbar.bookshelves.add": "Dodaj półkę",
   "Navbar.bookshelves.list": "Lista półek",
+  "Navbar.bookshelves.map": "Mapa półek",
   "Navbar.books": "Książki",
   "Navbar.books.add": "Dodaj ksiażkę",
   "Navbar.books.list": "Lista książek",
@@ -191,6 +197,7 @@
   "ROLE_ADMIN": "Administrator",
   "ROLE_MODERATOR": "Moderator",
   "ROLE_GUEST": "Gość",
+  "ShelfMap.title": "Mapa półek",
   "user_not_found": "Nie znaleziono użytkownika",
   "incorrect_password": "Niepoprawne hasło",
   "user_disabled": "Konto użytkownika zostało zablokowane.",
@@ -215,5 +222,7 @@
   "user_activated": "Użytkownik aktywowany",
   "cant_delete_genre_used_by_books": "Nie mozna usunać gatunku do którego są przypisane ksiażki",
   "unknown_error_occured": "Wystąpił nieznany błąd",
-  "book_already_on_shelf": "Książka znajduje się już na tej półce"
+  "book_already_on_shelf": "Książka znajduje się już na tej półce",
+  "version_mismatch": "Twoja strona posiada nieaktualne informacje, odśwież stronę przed aktualizacją",
+  "auth_token_expired": "Zostałeś wylogowany, prosimy o ponowne zalogowanie."
 }
