Fixed displaying own books, added taking and returning books, added reservation and reservation canceling

--- a/bookshare_front/src/Lang/EN/EN.json
+++ b/bookshare_front/src/Lang/EN/EN.json
@@ -26,6 +26,7 @@
   "Copy.MoveSuccessMessage": "Copy moved successfully",
   "Copy.MoveCopyTitle": "Move copy",
   "BookCopy.makeReservation": "Make reservation",
+  "BookCopy.cancelReservation": "Cancel reservation",
   "BookCopy.Modify": "Modify",
   "BookCopy.Delete": "Delete",
   "BookCopy.Take": "Take",
@@ -33,7 +34,7 @@
   "BookCopy.GenerateQR": "Generate QR code",
   "Bookshelf.Move": "Move",
   "Bookshelf.Remove": "Remove",
-  "Bookshelf.AddBookCopy": "Add Book",
+  "Bookshelf.AddBookCopy": "Add Book copy",
   "Site.name": "BookCross",
   "Bookshelf.BookList": "Books list",
   "Account.PasswordChangeAccordion": "Change password",
@@ -155,6 +156,7 @@
   "Info.Title": "Information",
   "Logs.FilterButton": "Filter",
   "Log.Title": "Log",
+  "List.empty": "The list is empty",
   "Modal.PickLocation": "Pick Location",
   "Modal.DeleteConfirm": "Confirm delete operation",
   "Modal.DeleteBookshelfText": "Are you sure you want to delete this bookshelf?",
@@ -197,7 +199,11 @@
   "ROLE_ADMIN": "Admin",
   "ROLE_MODERATOR": "Moderator",
   "ROLE_GUEST": "Guest",
-  "ShelfMap.title": "Shef Map",
+  "ShelfMap.title": "Shelf Map",
+  "Story.created": "Copy has been added to our database by  {{user}}",
+  "Story.moved": "Copy has been moved from one shelf to another by {{user}}",
+  "Story.taken": "Copy has been taken from shelf by  {{user}}",
+  "Story.put": "Copy was put to shelf by  {{user}}",
   "user_not_found": "User not found",
   "incorrect_password": "Incorrect password",
   "user_disabled": "User has been disabled.",
