--- a/bookshare_front/src/Lang/PL/PL.json
+++ b/bookshare_front/src/Lang/PL/PL.json
@@ -26,6 +26,7 @@
   "Copy.MoveSuccessMessage": "Kopia przeniesiona pomyślnie",
   "Copy.MoveConfirmMessage": "Na pewno chcesz przenieść ten egzemplarz na inną półię?",
   "Book.availability": "Dostępność",
+  "BookCopy.cancelReservation": "Anuluj rezerwację",
   "BookCopy.makeReservation": "Zarezerwuj",
   "BookCopy.Modify": "Modyfikuj",
   "BookCopy.Delete": "Usuń",
@@ -34,7 +35,7 @@
   "BookCopy.Move": "Przenieś",
   "Bookshelf.Move": "Przenieś",
   "Bookshelf.Remove": "Usuń",
-  "Bookshelf.AddBookCopy": "Dodaj ksiażkę",
+  "Bookshelf.AddBookCopy": "Dodaj egzemplarz",
   "Bookshelf.BookList": "Lista książek",
   "Account.PasswordChangeAccordion": "Zmień hasło",
   "Account.ChangeAccessLevels": "Poziomy dostpu",
@@ -155,6 +156,7 @@
   "Home.NearbyTab": "Okolica",
   "Logs.FilterButton": "Filtruj",
   "Log.Title": "Wpis",
+  "List.empty": "Lista jest pusta",
   "Modal.PickLocation": "Wybierz lokalizację",
   "Modal.DeleteConfirm": "Potwierdź usunięcie",
   "Modal.DeleteBookshelfText": "Czy na pewno chcesz usunąć tę półkę?",
@@ -198,6 +200,10 @@
   "ROLE_MODERATOR": "Moderator",
   "ROLE_GUEST": "Gość",
   "ShelfMap.title": "Mapa półek",
+  "Story.created": "Egzemplarz został dodany przez użytkownika  {{user}}",
+  "Story.moved": "Egzemplarz został przeniesiony przez użytkownika {{user}} pomiędzy półkami ",
+  "Story.taken": "Egzemplarz został wzięty z półki przez użytkownika {{user}}",
+  "Story.put": "Egzemplarz został odłożony na półkę przez użytkownika  {{user}}",
   "user_not_found": "Nie znaleziono użytkownika",
   "incorrect_password": "Niepoprawne hasło",
   "user_disabled": "Konto użytkownika zostało zablokowane.",
