a lot of changes

--- a/Bookshare/src/main/resources/LanguageRes_en.properties
+++ b/Bookshare/src/main/resources/LanguageRes_en.properties
@@ -6,3 +6,5 @@ account_enable_mail_subject=Unlock your BookCross account
 account_enable_mail_text=Your BookCross account has been blocked.Use the link below in order to unlock it: \n %s
 admin_account_login_mail_subject=Login Attempt
 admin_account_login_mail_text=There was a login attempt at your account from IP address: \n %s
+reservation_canceled_mail_subject=Reservation canceled
+reservation_canceled_mail_text=Your book copy reservation of: %s has been canceled.
