--- a/Bookshare/src/main/resources/LanguageRes_pl.properties
+++ b/Bookshare/src/main/resources/LanguageRes_pl.properties
@@ -6,3 +6,5 @@ account_enable_mail_subject=Odblokuj konto w serwisie BookCross
 account_enable_mail_text=Twoje konto w serwisie BookCross zostało zablokowane. Aby je odblokować, kliknij w poniższy link \n %s
 admin_account_login_mail_subject=Próba logowania
 admin_account_login_mail_text=Nastąpiła próba zalogowania na twoje konto z adresu IP: \n %s
+reservation_canceled_mail_subject=Rezerwacja anulowana
+reservation_canceled_mail_text=Twoja rezerwacja egzemplarza książki: %s została anulowana
