--- a/bookshare_front/src/Lang/EN/EN.json
+++ b/bookshare_front/src/Lang/EN/EN.json
@@ -58,6 +58,8 @@
   "Form.passwordConfirm": "Confirm password",
   "Form.sortBy": "Sort by",
   "Form.EmailFormatError": "Incorrect Email Format",
+  "Form.PasswordFormatError": "Incorrect password format",
+  "Format.EmailTooShortError": "Field is too short",
   "Form.LoginTooShortError": "Login too short",
   "Form.loginButton": "Log in",
   "Form.registerButton": "Create account",
@@ -141,6 +143,7 @@
   "Form.dateAfter": "Date after",
   "Form.PaginationInfo": "Displaying items {{from}} - {{to}} out of {{of}}",
   "Form.displaySize": "Amount of displayed items",
+  "Form.OwnBooksType": "Type of displayed books",
   "Genre.code": "Genre Name",
   "Genre.key": "Language",
   "Genre.keys": "Languages",
@@ -165,6 +168,7 @@
   "Modal.DeleteBookText": "Are you sure you want to delete this book copy?",
   "Modal.CreationConfirm": "Do you want to create a shelf in selected location?",
   "Modal.genre.modify": "Modify genre",
+  "Navbar.author.add": "Create author",
   "Navbar.login": "Log In",
   "Navbar.register": "Register",
   "Navbar.accounts": "Accounts List",
