--- a/bookshare_front/src/Lang/PL/PL.json
+++ b/bookshare_front/src/Lang/PL/PL.json
@@ -58,6 +58,8 @@
   "Form.Bookshelf": "Półka",
   "Form.passwordConfirm": "Potwierdź hasło",
   "Form.sortBy": "Sortuj po",
+  "Form.PasswordFormatError": "Hasło nie spełnia wymagań",
+  "Format.EmailTooShortError": "Adres email jest za krótki",
   "Form.LoginTooShortError": "Zbyt krótki login",
   "Form.loginButton": "Zaloguj",
   "Form.registerButton": "Stwórz konto",
@@ -141,6 +143,7 @@
   "Form.dateAfter": "Po dacie",
   "Form.PaginationInfo": "Wyświelanie elementów {{from}} - {{to}} z {{of}}",
   "Form.displaySize": "Ilość wyświetlanych elementów",
+  "Form.OwnBooksType": "Rodzaj wyświetlanych książek",
   "Genre.code": "Nazwa gatunku",
   "Genre.key": "Język",
   "Genre.keys": "Języki",
@@ -165,6 +168,7 @@
   "Modal.DeleteBookCopyText": "Czy na pewno chcesz usunąć ten egzemplarz?",
   "Modal.CreationConfirm": "Czy chcesz utworzyć półkę w wybranej lokacji??",
   "Modal.genre.modify": "Modyfikuj gatunek",
+  "Navbar.author.add": "Dodaj autora",
   "Navbar.login": "Zaloguj",
   "Navbar.register": "Zarejestruj",
   "Navbar.accounts": "Lista kont",
