To much to talk

--- a/bookshare_front/src/Lang/EN/EN.json
+++ b/bookshare_front/src/Lang/EN/EN.json
@@ -1,6 +1,8 @@
 {
   "Author.name": "Name",
   "Author.surname": "Surame",
+  "Author.booksCount": "Books count",
+  "Author.options": "Options",
   "Form.Yes": "Yes",
   "Form.No": "No",
   "Form.See": "Display",
@@ -58,7 +60,7 @@
   "Form.passwordConfirm": "Confirm password",
   "Form.sortBy": "Sort by",
   "Form.EmailFormatError": "Incorrect Email Format",
-  "Form.PasswordFormatError": "Incorrect password format",
+  "Form.PasswordFormatError": "Incorrect password format (at least 8 characters, at least one Capital letter, at least one number)",
   "Format.EmailTooShortError": "Field is too short",
   "Form.LoginTooShortError": "Login too short",
   "Form.loginButton": "Log in",
@@ -115,6 +117,8 @@
   "Form.BookCopyCreatedMessage": "Book copy created successfully",
   "Form.Success": "Success",
   "Form.OK": "OK",
+  "Form.booksCountUp": "Amount of books - from least",
+  "Form.booksCountDown": "Amount of books - from most",
   "Form.genreCodeUp": "Genre Name - alphabetically - a -> z",
   "Form.genreCodeDown": "Genre Name - alphabetically - z -> a",
   "Form.genreKeysUp": "Languages count - from least",
@@ -155,6 +159,7 @@
   "Home.BookMapTab": "Find Book",
   "Home.BookshelfMapTab": "Find Bookshelf",
   "Home.NearbyTab": "Nearby",
+  "Home": "BookCross",
   "Info.ConnectionBack": "Connection is back",
   "Info.Title": "Information",
   "Logs.FilterButton": "Filter",
@@ -175,6 +180,9 @@
   "Navbar.account": "Account",
   "Navbar.logout": "Log out",
   "Navbar.logs": "Logs",
+  "Navbar.authors": "Authors",
+  "Navbar.authors.add": "Add author",
+  "Navbar.authors.list": "Authors list",
   "Navbar.bookshelves": "Bookshelves",
   "Navbar.bookshelves.add": "Add bookshelf",
   "Navbar.bookshelves.list": "Bookshelves list",
@@ -218,6 +226,7 @@
   "request_sent_message": "If account with given user/email exists, link has been send to corresponding email",
   "cant_delete_bookshelf_with_books": "You can not remove bookshelf with books inside. Move or remove the books first",
   "cant_delete_book_with_copies": "You can not remove book with existing copies. Remove the copies first",
+  "cant_delete_author_with_books": "You can not delete author with existing books.",
   "mail_exist": "Mail address already in use",
   "login_exist": " Login already in use",
   "password_in_use": "Password already in use",
@@ -234,5 +243,20 @@
   "unknown_error_occured": "Unknown error occured",
   "book_already_on_shelf": "Book is already on this shelf",
   "version_mismatch": "Your page is not up to date. To make changes, reload it first",
-  "auth_token_expired": "Your login token expired. Please log again"
+  "auth_token_expired": "Your login token expired. Please log again",
+  "author_exists": "Author already exists",
+  "access_denied": "Access denied",
+  "password_changed": "Password has been changed",
+  "unknown_language":"Unknown language",
+  "language_already_in_use": "Language already in use",
+  "password_already_reset": "Password has already been reset",
+  "activation_token_invalid": "Activation token invalid",
+  "activation_token_expired": "Activation token expired",
+  "auth_token_invalid": "Auth token invalid",
+  "reset_token_invalid":"Reset token invalid",
+  "reset_token_expired": "Reset token expired",
+  "bookshelf_not_found": "Bookshelf not found",
+  "author_not_found": "Author not found",
+  "query_error": "Query error",
+  "account_created": "Account created"
 }
