--- a/bookshare_front/src/Lang/PL/PL.json
+++ b/bookshare_front/src/Lang/PL/PL.json
@@ -1,6 +1,8 @@
 {
   "Author.name": "Imię",
   "Author.surname": "Nazwisko",
+  "Author.booksCount": "Ilość książek",
+  "Author.options": "Opcje",
   "Form.Yes": "Tak",
   "Form.No": "Nie",
   "Site.name": "BookCross",
@@ -58,7 +60,7 @@
   "Form.Bookshelf": "Półka",
   "Form.passwordConfirm": "Potwierdź hasło",
   "Form.sortBy": "Sortuj po",
-  "Form.PasswordFormatError": "Hasło nie spełnia wymagań",
+  "Form.PasswordFormatError": "Hasło nie spełnia wymagań (conajmniej 8 znaków, wymagane duże i małe litery oraz cyfry)",
   "Format.EmailTooShortError": "Adres email jest za krótki",
   "Form.LoginTooShortError": "Zbyt krótki login",
   "Form.loginButton": "Zaloguj",
@@ -88,9 +90,9 @@
   "Form.LocationButton": "Z lokalizacji",
   "Form.location": "Lokalizacja",
   "Form.FromMapButton": "Z mapy",
-  "Form.bookCount": "Ilość książek",
-  "Form.bookCountDown": "Ilość książek - malejąco",
-  "Form.bookCountUp": "Ilość książek - rosnąco",
+  "Form.bookCount": "Liczba książek",
+  "Form.bookCountDown": "Liczba książek - malejąco",
+  "Form.bookCountUp": "Liczba książek - rosnąco",
   "Form.CannotCreateGenreWIthoutTranslationError": "Nie można utworzyć gatunku bez conajmiej jednego tłumaczenia",
   "Form.userLocation": "Lokalizacja użytkownika",
   "Form.distance": "Odległość",
@@ -115,10 +117,12 @@
   "Form.BookCopyCreatedMessage": "Egzemplarz książki utworzony pomyślnie",
   "Form.Success": "Sukces",
   "Form.OK": "OK",
+  "Form.booksCountUp": "Liczba książek - rosnąco",
+  "Form.booksCountDown": "Liczba książek - malejąco",
   "Form.genreCodeUp": "Nazwa gatunku - alfabetycznie - a -> z",
   "Form.genreCodeDown": "Nazwa gatunku - alfabetycznie - z -> a",
-  "Form.genreKeysUp": "Ilość języków - rosnąco",
-  "Form.genreKeysDown": "Ilość języków - malejąco",
+  "Form.genreKeysUp": "Liczba języków - rosnąco",
+  "Form.genreKeysDown": "Liczba języków - malejąco",
   "Form.titleUp": "Tytuł - alfabetycznie - a -> z",
   "Form.titleDown": "Tytuł - alfabetycznie - z -> a",
   "Form.authorSurnameUp": "Nazwisko autora - alfabetycznie - a -> z",
@@ -127,10 +131,10 @@
   "Form.authorNameDown": "Imię autora - alfabetycznie - z -> a",
   "Form.releaseYearUp": "Rok wydania - od najstarszego",
   "Form.releaseYearDown": "Rok wydania - od najnowszego",
-  "Form.copyCountUp": "Ilość egzemplarzy- rosnąco",
-  "Form.copyCountDown": "Ilość egzemplarzy - malejąco",
-  "Form.usageCountUp": "Ilość użyć - rosnąco",
-  "Form.usageCountDown": "Ilość użyć - malejąco",
+  "Form.copyCountUp": "Liczba egzemplarzy- rosnąco",
+  "Form.copyCountDown": "Liczba egzemplarzy - malejąco",
+  "Form.usageCountUp": "Liczba użyć - rosnąco",
+  "Form.usageCountDown": "Liczba użyć - malejąco",
   "Form.GenreDeletedMessage": "Gatunek został usunięty",
   "Form.GenreCreatedMessage": "Gatunek został dodany",
   "Form.AccountCreatedMessage": "Konto zostało utworzone. Niedługo otrzymasz wiadomość z linkiem aktywacyjnym",
@@ -142,7 +146,7 @@
   "Form.dateBefore": "Przed datą",
   "Form.dateAfter": "Po dacie",
   "Form.PaginationInfo": "Wyświelanie elementów {{from}} - {{to}} z {{of}}",
-  "Form.displaySize": "Ilość wyświetlanych elementów",
+  "Form.displaySize": "Liczba wyświetlanych elementów",
   "Form.OwnBooksType": "Rodzaj wyświetlanych książek",
   "Genre.code": "Nazwa gatunku",
   "Genre.key": "Język",
@@ -151,7 +155,7 @@
   "Genre.name": "Tłumaczenia",
   "Genre.Remove": "Usuń",
   "Genre.Modify": "Modyfikuj",
-  "Genre.usageCount": "Ilość użyć",
+  "Genre.usageCount": "Liczba użyć",
   "Home.BookMapTab": "Znajdź książkę",
   "Home.BookshelfMapTab": "Znajdź półkę",
   "Info.ConnectionBack": "Odzyskano połączenie",
@@ -175,6 +179,9 @@
   "Navbar.account": "Konto",
   "Navbar.logout": "Wyloguj",
   "Navbar.logs": "Logi",
+  "Navbar.authors": "Autorzy",
+  "Navbar.authors.add": "Dodaj autora",
+  "Navbar.authors.list": "Lista autorów",
   "Navbar.bookshelves": "Półki",
   "Navbar.bookshelves.add": "Dodaj półkę",
   "Navbar.bookshelves.list": "Lista półek",
@@ -218,6 +225,7 @@
   "request_sent_message": "Jeżeli w serwisie istnieje konto, została na nie wysłana wiadomość",
   "cant_delete_bookshelf_with_books": "Nie możesz usunąć półki na której znajdują się ksiażki. Usuń książki lub przenieś je na inną półkę",
   "cant_delete_book_with_copies": "Nie możesz usunąć książki z istniejącymi egzemplarzami. Usuń najpierw egzemplarze",
+  "cant_delete_author_with_books": "Nie możesz usunąć autora z istniejącymi książkami.",
   "mail_exist": "Adres email jest już używany",
   "login_exist": " Login jest już używany",
   "password_in_use": "Hasło już w użyciu",
@@ -234,5 +242,20 @@
   "unknown_error_occured": "Wystąpił nieznany błąd",
   "book_already_on_shelf": "Książka znajduje się już na tej półce",
   "version_mismatch": "Twoja strona posiada nieaktualne informacje, odśwież stronę przed aktualizacją",
-  "auth_token_expired": "Zostałeś wylogowany, prosimy o ponowne zalogowanie."
+  "auth_token_expired": "Zostałeś wylogowany, prosimy o ponowne zalogowanie.",
+  "author_exists": "Autor już istnieje",
+  "access_denied": "Brak dostępu",
+  "password_changed": "Hasło zostało zmienione",
+  "unknown_language":"Nieznany język",
+  "language_already_in_use": "Język już w użyciu",
+  "password_already_reset": "Hasło zostało już zresetowane",
+  "activation_token_invalid": "Nieprawidłowy token aktywacyjny",
+  "activation_token_expired": "Przedawniony token aktywacyjny",
+  "auth_token_invalid": "Nieprawidłowy token uwierzytelniający",
+  "reset_token_invalid":"Nieprawidłowy token resetu",
+  "reset_token_expired": "Przedawniony token resetu",
+  "bookshelf_not_found": "Nie odnaleziono półki",
+  "author_not_found": "Nie odnaleziono autora",
+  "query_error": "Błąd kwerendy",
+  "account_created": "Konto zostało utworzone"
 }
